fix nav-bar to show on top of all the element with z-index

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -10,6 +10,7 @@
   align-items: center;
   border-radius: 70% 0 0 70%;
   transition: right 0.8s cubic-bezier(1, 0, 0, 1);
+  z-index: 10;
 }
 
 .change {
@@ -17,8 +18,8 @@
 }
 
 .hamburger-menu {
-  width: 35px;
-  height: 30px;
+  width: 65px;
+  height: 60px;
   position: fixed;
   top: 30px;
   right: 30px;
@@ -38,7 +39,7 @@
 }
 
 .change .line-1 {
-  transform: rotateZ(-405deg) translate(-8px, 6px);
+  transform: rotateZ(-405deg) translate(-15px, 13px);
 }
 
 .change .line-2 {
@@ -46,7 +47,7 @@
 }
 
 .change .line-3 {
-  transform: rotateZ(405deg) translate(-8px, -6px);
+  transform: rotateZ(405deg) translate(-15px, -13px);
 }
 
 .nav-list {
@@ -61,7 +62,7 @@
 
 .nav-link {
   text-decoration: none;
-  font-size: 30px;
+  font-size: 50px;
   color: #0abfbc;
   font-weight: 300;
   letter-spacing: 2px;
