--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,15 +16,11 @@ body {
 
 img.logo-image {
   height: 85px;
-  padding: 20px 10px;
+  top: 30px;
+  left: 30px;
   position: fixed;
 }
 
-.header {
-  position: fixed;
-  width: 100vw;
-  //background-color: rgba(6, 6, 16, 0.8);
-}
 h2 {
   font-family: "Heebo", sans-serif;
   color: #808080;
@@ -147,7 +143,8 @@ video {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 85vw;
+  width: 60vw;
+  text-align: center;
   padding: 20px;
   //border: 1px solid #fff;
   border-radius: 10px;
